# AgenticPOIBench-A-Realistic-Benchmark-for-Agentic-Spatiotemporal-Constrained-POI-Search

./: .gitignore  AgenticPOIBench  README.md  pyproject.toml  requirements.txt
data/: eval.json
docs/get_amap_mcp/: get_amap_mcp.md
docs/seed_constraints/: seed_constraints_cn.md  seed_constraints_en.md
samples/: sample.json
scripts/: AgenticPOIBench.sh  agentic_poi_bench_cli.py  run_dialogue_once.py  run_evaluate_once.py  run_extractor_once.py  run_pass_at_k.py  setup_venv.sh  verify_env.py
src/: cli_batch.py  concurrency.py  experiment_paths.py
src/config/: __init__.py  config.py  config.yaml
src/data/: __init__.py  ingestion.py
src/evaluation/: __init__.py  completed_run.py  extractor.py  pass_at_k.py  validator.py
src/orchestration/: __init__.py  graph.py  pass_at_k.py  run_summary.py
src/persistence/: __init__.py  dialogue_artifact.py
src/prompt/: prompt.yaml
src/simulation/: __init__.py  agent.py  user_simulator.py
src/tools/: amap_tools.py  amap_tools_descriptions.json
verify_scripts/: 1.py  10.py  102.py  104.py  106.py  107.py  1072.py  1074.py  108.py  1081.py  1084.py  1085.py  1087.py  1089.py  109.py  1091.py  110.py  112.py  115.py  116.py  117.py  118.py  12.py  120.py  122.py  126.py  127.py  128.py  129.py  13.py  130.py  131.py  133.py  134.py  135.py  137.py  139.py  141.py  143.py  145.py  (+168 more)
